--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
   background-color: #000000;
   color: #ffffff;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
-}
+  min-height: 100vh;
+} 
