--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,10 +1,19 @@
-@import url(./_type/popup__field_type_name.css); 
-
 .popup__field {
   border: none;
   border-bottom: 1px solid #00000033;
   height: 27.26px;
   padding: 0;
   font-size: 14px;
-  line-height: 17px;
+  line-height: 17px; 
+  margin: 36px 0 0;
+}
+
+@media (max-width: 520px) {
+  .popup__field {
+    width: 100%;
+    text-overflow: ellipsis;
+    white-space: wrap;
+    overflow: hidden;
+    margin: 20px 0 0;
+  } 
 }
