--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -3,7 +3,7 @@
   height: 24px;
   border: 1px solid #FFFFFF;
   background-color: #000000;
-  background: url(./../../../images/edit.png) center no-repeat;
+  background: url(./../../../images/edit.svg) center no-repeat;
   margin-top: 37px;
 }
 
