--- a/pages/index.css
+++ b/pages/index.css
@@ -9,5 +9,6 @@
 @import url(../blocks/places/places.css);
 @import url(../blocks/profile/profile.css); 
 @import url(../blocks/popup/popup.css); 
+@import url(../blocks/popup/_type/popup_type_photo.css); 
 @import url(../blocks/popup/_opened/popup_opened.css); 
 
