Проектная работа 6. Первая проверка

--- a/pages/index.css
+++ b/pages/index.css
@@ -11,4 +11,11 @@
 @import url(../blocks/popup/popup.css); 
 @import url(../blocks/popup/_type/popup_type_photo.css); 
 @import url(../blocks/popup/_opened/popup_opened.css); 
+@import url(../blocks/form/form.css); 
+
+
+
+
+
+
 
