--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,6 +7,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   padding: 34px 36px 36px;
+  min-height: 250px;
   font-family: 'Inter', 'Arial', sans-serif; 
   box-sizing: content-box;
 }
