--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -6,6 +6,8 @@
   font-size: 14px;
   line-height: 17px; 
   margin: 36px 0 0;
+  width: 100%;
+  outline: none;
 }
 
 @media (max-width: 520px) {
@@ -14,6 +16,12 @@
     text-overflow: ellipsis;
     white-space: wrap;
     overflow: hidden;
-    margin: 20px 0 0;
+    margin: 30px 0 0;
+  } 
+}
+
+@media (max-width: 380px) {
+  .popup__field {
+    margin: 46px 0 0;
   } 
 }
