--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,8 +2,10 @@
 @import url(./__container/popup__container.css); 
 @import url(./__container/_no-background/popup__container_no-background.css); 
 @import url(./__field/popup__field.css); 
+@import url(./__field/_invalid/popup__field_invalid.css); 
 @import url(./__form/popup__form.css); 
 @import url(./__save-button/popup__save-button.css); 
+@import url(./__save-button/_disabled/popup__save-button_disabled.css); 
 @import url(./__title/popup__title.css); 
 @import url(./__photo-title/popup__photo-title.css); 
 @import url(./__photo/popup__photo.css); 
